Круг действующих проблем над этапом, изделие и проблема в одной вкладке, сбои станков у технолога, экран по роли
